<resources>
    <string name="app_name" translatable="false">CSS admin</string>
    <string name="test">Test</string>
    <string name="default_command">Default command</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="sever_ip">Server IP</string>
    <string name="port">Port</string>
    <string name="rcon_password">RCON password</string>
    <string name="please_wait">Please wait for the previous command to finish</string>
    <string name="status">Status</string>
    <string name="bots">Bots</string>
    <string name="bots_kick_all">Kick all</string>
    <string name="bots_add_t">+T</string>
    <string name="bots_add_ct">+CT</string>
    <string name="restart_game_short">Restart</string>
    <string name="restart_game">Restart game</string>
    <string name="bots_kick_all_short">-BOTS</string>
    <string name="player_names">Names</string>
    <string name="successful">✅ successful</string>
    <string name="fail">❌ fail</string>
    <string name="run_command_sign" translatable="false">➤</string>
    <string name="fill_rcon_settings">Fill in RCON settings</string>
    <string name="player_names_log">> ## player names:</string>
    <string name="no_players">No players</string>
    <string name="invalid_rcon_password">Invalid RCON password</string>
    <string name="prohibited">Execution of this command is prohibited!</string>
    <string name="map_button">Map</string>
    <string name="select_map_title">Select Map</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="kick_button">Kick</string>
    <string name="select_player_title">Kick player</string>
</resources>